--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
 spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/bibliotecaVirtualdb
-spring.datasource.username=postgres
-spring.datasource.password=kutabyala
+spring.datasource.username=
+spring.datasource.password=
 #Responsável por criar as nossas entidades no banco de dados
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+logging.file.name=/var/log/java-app-local.log
+logging.level.root=INFO
+
+
