--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/bibliotecaVirtualdb
-spring.datasource.username=
-spring.datasource.password=
-#Responsável por criar as nossas entidades no banco de dados
+spring.datasource.username=TEST_USER
+spring.datasource.password=TEST_PASSWORD
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
